Develop (#2)
* base controller implementation has added

* xml has moved to separate package

* validation issues has fixed

* validation has moved to separate library

* in memory storage has added

* in memory storage implementation has finished

* rss type resolving has added

* checkstyle has added

* checkstyle issues has fixed

* checkstyle issues has fixed

* checkstyle issues has fixed

* tests have added

* rss processors has added, codestyle issues have fixed

* rss schedulers have added

* notifiers cache map has added

* common notifications have added

* put entries algorithm has changed

* debug and error fixing

* debug and error fixing when telegram message is sent

* tests have added, cropping html has added

* rss updating has fixed

* codestyle errors have fixed

* atom processor has implemented

* atom notification processor has implemented

Co-authored-by: Alexander Romanyuk <a.romanyuk@softwarecats.dev>